# OpenCareEyes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  GITHUB_UPLOAD_GUIDE.md  LEARNING_LOG.md  PRODUCT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPLOAD_CHECKLIST.md  build.bat  installer.iss  opencareyes.spec  pyproject.toml  requirements.txt  使用说明.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: windows-ci.yml
assets/pets/snow_ferret/: manifest.json
assets/styles/: dark.qss  light.qss
installer/languages/: README.md
licenses/: PYTHON-PSF.txt
scripts/: build_chime_asset.py  build_demo_gif.py  build_pet_assets.py  build_pet_atlas.py  capture_ui.py  ci_stability_smoke.py  generate_icon.py  generate_winget_manifest.py
src/opencareyes/: __init__.py  __main__.py  app.py  constants.py  controller.py  diagnostics.py  state.py
src/opencareyes/application/: __init__.py  command_handlers.py  companion_coordinator.py  companion_runtime.py  context_coordinator.py  effect_coordinator.py  holiday_service.py  hourly_chime_service.py  note_repository.py  pet_asset_repository.py  pet_pack_registry.py  state_projector.py  status_presenter.py  system_metrics.py  update_checker.py  update_service.py  utility_timer.py  weather_service.py  window_avoidance.py
src/opencareyes/config/: defaults.py  presets.py  settings.py
tests/: test_app_onboarding.py  test_automation_page.py  test_break_reminder.py  test_break_surfaces.py  test_break_v04.py  test_ci_stability_smoke.py  test_color_temp.py  test_companion_bootstrap.py  test_companion_coordinator.py  test_companion_runtime.py  test_companion_ui_v06.py  test_context_coordination.py  test_context_policy.py  test_context_sensor.py  test_controller.py  test_diagnostics.py  test_display_safety.py  test_display_transactions.py  test_display_worker.py  test_holiday_service.py  test_hotkeys.py  test_hourly_chime_service.py  test_main_panel_lazy.py  test_note_repository.py  test_overlay_recovery.py  test_pet_animator.py  test_pet_asset_repository.py  test_pet_assets.py  test_pet_bubble.py  test_pet_catalog_lazy.py  test_pet_catalog_state.py  test_pet_domain.py  test_pet_motion.py  test_pet_pack_registry.py  test_pet_surface.py  test_privacy_regression.py  test_progressive_prompt.py  test_quick_tools.py  test_recycle_bin.py  test_release_packaging.py  (+14 more)
(+44 files in other folders)
