[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opencareyes"
version = "0.1.0"
description = "Open-source eye protection tool for Windows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "astral>=3.2",
    "keyboard>=0.13",
    "darkdetect>=0.8",
]

[project.scripts]
opencareyes = "opencareyes.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
